<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingTop="60dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/headline_select_type_account"
            android:id="@+id/textView3"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:textSize="50dp"
            android:nestedScrollingEnabled="false" />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/RadioGroup1"
            android:background="#abbeab"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:checkedButton="@+id/checked1">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_costumer"
                android:id="@+id/radioButton"
                android:textSize="20dp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_provider"
                android:id="@+id/radioButton2"
                android:textSize="20dp" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button3"
                android:text="@string/button_continue"
                android:textSize="18dp"
                android:height="50dp"
                android:width="300dp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>