<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_login"
    tools:context="com.example.yairandaviad.bookshop.Login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#ffBE80FF"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

<LinearLayout
    android:id="@+id/ll1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:gravity="center_vertical|center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/headline_bookStore"
        android:id="@+id/textView2"
        android:textSize="30dp"
        android:textColor="#ffffffff" />


</LinearLayout>

<LinearLayout
    android:id="@+id/ll2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="0.8"
    android:gravity="center_vertical|center_horizontal">
    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:visibility="gone" />


            <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:orientation="vertical">

                <AutoCompleteTextView android:id="@+id/username" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_userName"
                    android:inputType="textEmailAddress" android:maxLines="1"
                    android:singleLine="true"
                    android:layout_marginBottom="10dp"
                    android:textColorHint="#ffffffff"
                    android:textColor="#ffffffff" />

                <EditText android:id="@+id/password" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_password"
                    android:imeActionLabel="@string/action_sign_in"
                    android:imeOptions="actionUnspecified" android:inputType="textPassword"
                    android:maxLines="1" android:singleLine="true"
                    android:layout_marginBottom="10dp"
                    android:textColorHint="#ffffffff"
                    android:textColor="#ffffffff" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgotPassword"
                    android:id="@+id/forgot_your_password_or_username"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:autoLink="web"
                    android:textColor="#ffffffff"
                    android:textSize="13dp" />

                <Button android:id="@+id/sign_in_button" style="?android:textAppearanceSmall"
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:layout_marginTop="16dp" android:text="@string/action_sign_in"
                    android:textStyle="bold"
                    android:textColor="#ffffffff"
                    android:background="#ff7e51c2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_new_member"
                    android:id="@+id/text_new_member"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:autoLink="web"
                    android:textColor="#ffffffff"
                    android:textSize="13dp" />

            </LinearLayout>

</LinearLayout>

<LinearLayout
    android:id="@+id/ll3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="vertical"
    android:gravity="center">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_about"
        android:layout_marginTop="15dp"
        android:id="@+id/button2" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_gravity="center_vertical"
            android:text="@string/textView_language"
            android:id="@+id/textView"
            android:textSize="20dp" />

        <Spinner
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:entries="@array/language_array"
            android:id="@+id/spinner"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>


</LinearLayout>
</LinearLayout>